// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gcs – endpoint next get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint",
}
`;

exports[`gcs – endpoint next patch 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "15",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "public": true,
  },
  "method": "PATCH",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint",
}
`;

exports[`gcs – endpoint next resetOwnerString 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint/owner_string",
}
`;

exports[`gcs – endpoint next update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "65",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "endpoint#1.0.0",
    "display_name": "My First Endpoint",
  },
  "method": "PUT",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint",
}
`;

exports[`gcs – endpoint next updateOwner 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "72",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "endpoint_owner#1.0.0",
    "identity_id": "example-identity-id",
  },
  "method": "PUT",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint/owner",
}
`;

exports[`gcs – endpoint next updateOwnerString 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "70",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "owner_string#1.0.0",
    "identity_id": "example-identity-id",
  },
  "method": "PUT",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint/owner_string",
}
`;

exports[`gcs – endpoint next updateSubscriptionId 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "87",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "endpoint_subscription#1.0.0",
    "subscription_id": "example-subscription-id",
  },
  "method": "PUT",
  "url": "https://fa5e.bd7c.data.globus.org/api/endpoint/subscription_id",
}
`;
